fix gallery.html overlay image path

--- a/gallery.html
+++ b/gallery.html
@@ -994,7 +994,7 @@
 								<div>
 									<ul class="ace-thumbnails clearfix">
 										<li>
-											<a href="./dist/images/gallery/image-1.jpg" title="Photo Title" data-rel="colorbox">
+											<a href="assets/images/gallery/image-1.jpg" title="Photo Title" data-rel="colorbox">
 												<img width="150" height="150" alt="150x150" src="assets/images/gallery/thumb-1.jpg" />
 											</a>
 
@@ -1036,7 +1036,7 @@
 										</li>
 
 										<li>
-											<a href="./dist/images/gallery/image-2.jpg" data-rel="colorbox">
+											<a href="assets/images/gallery/image-2.jpg" data-rel="colorbox">
 												<img width="150" height="150" alt="150x150" src="assets/images/gallery/thumb-2.jpg" />
 												<div class="text">
 													<div class="inner">Sample Caption on Hover</div>
@@ -1045,7 +1045,7 @@
 										</li>
 
 										<li>
-											<a href="./dist/images/gallery/image-3.jpg" data-rel="colorbox">
+											<a href="assets/images/gallery/image-3.jpg" data-rel="colorbox">
 												<img width="150" height="150" alt="150x150" src="assets/images/gallery/thumb-3.jpg" />
 												<div class="text">
 													<div class="inner">Sample Caption on Hover</div>
@@ -1072,7 +1072,7 @@
 										</li>
 
 										<li>
-											<a href="./dist/images/gallery/image-4.jpg" data-rel="colorbox">
+											<a href="assets/images/gallery/image-4.jpg" data-rel="colorbox">
 												<img width="150" height="150" alt="150x150" src="assets/images/gallery/thumb-4.jpg" />
 												<div class="tags">
 													<span class="label-holder">
@@ -1112,7 +1112,7 @@
 														<span>Some Title!</span>
 
 														<br />
-														<a href="./dist/images/gallery/image-5.jpg" data-rel="colorbox">
+														<a href="assets/images/gallery/image-5.jpg" data-rel="colorbox">
 															<i class="ace-icon fa fa-search-plus"></i>
 														</a>
 
@@ -1129,7 +1129,7 @@
 										</li>
 
 										<li>
-											<a href="./dist/images/gallery/image-6.jpg" data-rel="colorbox">
+											<a href="assets/images/gallery/image-6.jpg" data-rel="colorbox">
 												<img width="150" height="150" alt="150x150" src="assets/images/gallery/thumb-6.jpg" />
 											</a>
 
@@ -1153,7 +1153,7 @@
 										</li>
 
 										<li>
-											<a href="./dist/images/gallery/image-1.jpg" data-rel="colorbox">
+											<a href="assets/images/gallery/image-1.jpg" data-rel="colorbox">
 												<img width="150" height="150" alt="150x150" src="assets/images/gallery/thumb-1.jpg" />
 											</a>
 
@@ -1177,7 +1177,7 @@
 										</li>
 
 										<li>
-											<a href="./dist/images/gallery/image-2.jpg" data-rel="colorbox">
+											<a href="assets/images/gallery/image-2.jpg" data-rel="colorbox">
 												<img width="150" height="150" alt="150x150" src="assets/images/gallery/thumb-2.jpg" />
 											</a>
 
